# lexmy

./: .gitignore  README.md  app.py  final_code.md  pyproject.toml  requirements.txt  test_project.txt
.streamlit/: config.toml  secrets.toml.example
artifacts/: concept_vocab.json  graph.pkl  sections_full.json
artifacts/chroma/092691c7-efe0-4ac2-96d3-1b86aefd7097/: index_metadata.pickle
artifacts/chroma/439f50d4-e315-4b19-a794-c60a6ac6641c/: index_metadata.pickle
artifacts/chroma/f21e0d2e-d3f9-43ca-9003-732238471ef3/: index_metadata.pickle
lexmy/: __init__.py  llm.py  memory.py  prompt.py  rag.py  retrieval.py  storage.py
